# bigtech_chat-be

./: .dockerignore  .gitignore  API_REFACTORING_v1.0_20260123.md  API_REFACTORING_v2.0_20260123.md  Dockerfile  LICENSE  MSA_MIGRATION_STATUS.md  NEXT_STEPS.md  README.md  ch2_description.md  ck1_description.md  docker-compose.msa.yml  docker-compose.test.yml  docker-compose.yml  package.json  pytest.ini  requirements.txt  run_tests.py  test_friend_service.py  test_kafka.py
app/: main.py
docs/: DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_PROGRESS.md  QUICK_START.md  READING_GUIDE.md  online_presence_system.md  presence_client_example.md  redis-security.md
k8s/: README.md
legacy/: .env  .env.example  Dockerfile  pytest.ini
microservices/: benchmark-fastapi-1771988300159.json  (+6 more)
microservices/shared_lib/: pyproject.toml
microservices/shared_lib/shared_lib/: __init__.py
microservices/shared_lib/shared_lib/api/: __init__.py  dependencies.py
microservices/shared_lib/shared_lib/cache/: __init__.py  decorators.py  service.py
microservices/shared_lib/shared_lib/clients/: __init__.py  config.py  user_client.py
microservices/shared_lib/shared_lib/core/: __init__.py  config.py  errors.py  validators.py
microservices/shared_lib/shared_lib/database/: __init__.py  mongodb.py  mysql.py  redis.py
microservices/shared_lib/shared_lib/kafka/: __init__.py  events.py  producer.py
microservices/shared_lib/shared_lib/schemas/: __init__.py  user.py
microservices/shared_lib/shared_lib/utils/: __init__.py  auth.py
microservices/shared_lib/tests/: conftest.py  test_cache.py
(+568 files in other folders)
